public/files/perm/idevices/base/padlock/edition/padlock.css
#candadoIdeviceForm input[type="radio"],
#candadoIdeviceForm input[type="checkbox"],
#candadoIdeviceForm select {
    cursor: pointer;
}

.candado-EPanel {
    margin: 0.7em auto;
    padding: 0;
    position: relative;
    width: 100%;
}
#candadoEDTime{
    width: 9ch !important;
    max-width: 9ch !important;;
}

.candado-EDataAccess {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 0.1em;

}
#candadoEDTime{
    min-width: 3em;
}

.candado-EDataAccess input[type=text] {
    width: 100%;
    min-width: 50px;
    flex-grow: 1;
}

.candado-EDataAccess label {
    flex-shrink: 0;
    margin-right: 0.15em;
}

.candado-EDataAccess input[type=text]:nth-of-type(2n+1),
.candado-EDataAccess input[type=number]:nth-of-type(2n+1) {
    margin-right: 0.2em;
}

.exe-block-info img {
    vertical-align: middle;
    margin-left: .2em
}


#candadoIdeviceFormTab1 p:first-child {
    margin-top: 0;
}

#candadoIdeviceFormTab1 {
    display: flex;
    flex-wrap: wrap;
    gap: 2%;
}

#candadoIdeviceFormTab1>* {
    flex: 0 0 48%;
}

#candadoIdeviceFormTab1> :first-child {
    flex: 0 0 100%;
}


@media screen and (max-width:720px) {
    #candadoIdeviceFormTab1>* {
        flex: 0 0 100%;
    }
    .candado-EDataAccess {
        flex-wrap: wrap;
    }

    .candado-EDataAccess input[type=text],
    .candado-EDataAccess input[type=number] {
        margin-bottom: 0.3em;
    }
}

#candadoIdeviceForm #candadoIdeviceFormTab1 label {
    display: block;
    margin-bottom: .2em;
    color:  #0BA1A1;
    font-weight: 500;
}

#candadoIdeviceForm #candadoIdeviceFormTab1 input {
    width: 100%;
}


.exe-form-tabs {
    margin: 0 0 1.5em 0;
    padding: 0;
    list-style: none
}

#main .exe-form-tabs li {
    margin: 0;
    padding: 0;
    list-style: none;
    list-style-image: none;
    display: inline
}

.exe-form-tabs li:first-child a {
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px
}

.exe-form-tabs li:last-child a {
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px
}

.exe-form-tabs a {
    display: inline-block;
    padding: .5em 1em;
    border: 1px solid #CCC;
    background: #F9F9F9;
    color: #666
}

.exe-form-tabs li:not(:last-child) a {
    border-right: none;
}

.exe-form-tabs .exe-form-active-tab {
    color: #000;
    background: #FFF;
    font-weight: 500
}

.candadoToggle {
    margin: 0 0 10px;
    box-sizing: border-box;
    font-size: 0;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    flex-flow: row nowrap;
    -webkit-box-pack: start;
    justify-content: flex-start;
    -webkit-box-align: stretch;
    align-items: stretch;
}

.candadoToggle input {
    width: 0;
    height: 0;
    position: absolute;
    left: -9999px;
}

.candadoToggle input+label {
    cursor: pointer;
    margin: 0;
    padding: .75rem 1.5rem;
    box-sizing: border-box;
    position: relative;
    display: inline-block;
    border: solid 1px #DDD;
    background-color: #FFF;
    font-size: 1rem;
    line-height: 110%;
    font-weight: 600;
    text-align: center;
    box-shadow: 0 0 0 rgba(255, 255, 255, 0);
    -webkit-transition: border-color .15s ease-out, color .25s ease-out, background-color .15s ease-out, box-shadow .15s ease-out;
    transition: border-color .15s ease-out, color .25s ease-out, background-color .15s ease-out, box-shadow .15s ease-out;
}

.candadoToggle input+label:first-of-type {
    border-radius: 6px 0 0 6px;
    border-right: none;
}

.candadoToggle input+label:last-of-type {
    border-radius: 0 6px 6px 0;
    border-left: none;
}

.candadoToggle input:hover+label {
    border-color: #0BA1A1;
}

.candadoToggle input:checked+label {
    background-color: #0BA1A1;
    color: #fff;
    border-color: #CCC;
    z-index: 1;
}

.candadoToggle input:focus+label {
    outline: dotted 1px #CCC;
    outline-offset: .45rem;
}

#candadoIdeviceForm .candado-TypeGameHelp {
    display: none;
    font-size: .95em
}

.Games-Reportdiv {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 2px;
}

.GameModeHelpLink {
    margin: 0 2px;
    vertical-align: middle;
}


.GameModeLabel {
    font-weight: normal
}

@media (max-width: 400px) {
    .candadoToggle input+label {
        padding: .75rem .25rem;
        -webkit-box-flex: 0;
        flex: 0 0 50%;
        display: -webkit-box;
        display: flex;
        -webkit-box-pack: center;
        justify-content: center;
        -webkit-box-align: center;
        align-items: center;
        flex-wrap: wrap;
    }
}

